@@ -30,7 +30,7 @@ VIETNAMESE_ALPHABET  = set(u'aăâbcdđeêghiklmnoôơpqrstuưvxyAĂÂBCDĐEÊGH
 HAITIAN_ALPHABET     = set(u'aanbchdeèenfghijklmnngoòonouounprstuivwyzAAnBChDEèEnFGHIJKLMNNgOòOnOuOunPRSTUiVWYZ')                           #HAITIAN ALPHABET
 GALICIAN_ALPHABET    = set(u'abcdefghilmnñopqrstuvxzABCDEFGHILMNÑOPQRSTUVXZ')                                                               #GALICIAN ALPHABET
 DUTCH_ALPHABET       = set(u'abcdefghijklmnopqrstuvwxijyzABCDEFGHIJKLMNOPQRSTUVWXIJYZ')                                                     #DUTCH ALPHABET
-GREEK_ALPHABET       = set(u'αβγδεζηθικλμνξοπρσςτυφχψωΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩ')															#GREEK ALPHABET
+GREEK_ALPHABET       = set(u'αβγδεζηθικλμνξοπρσςτυφχψωΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩΆΈΉΊΌΎΏΐΪΫάέήίΰϊϋόύώ')										#GREEK ALPHABET
 DANISH_ALPHABET      = set(u'аbcdefghijklmnopqrstuvwxyzæøåАBCDEFGHIJKLMNOPQRSTUVWXYZÆØÅ')                                                   #DANISH ALPHABET
 INDONESIAN_ALPHABET  = set(u'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ')                                                         #INDONESIAN ALPHABET
 IRISH_ALPHABET       = set(u'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ')                                                         #IRISH ALPHABET
