@@ -28,6 +28,7 @@
 
 #include "tst_abstractregexp.h"
 #include "../qmuparser/qmudef.h"
+#include "../qmuparser/qmuformulabase.h"
 
 #include "../vmisc/logging.h"
 #include "../vpatterndb/vtranslatevars.h"
@@ -35,6 +36,17 @@
 
 #include <QtTest>
 #include <QTranslator>
+
+namespace
+{
+QString PrepareValidNameChars()
+{
+    qmu::QmuFormulaBase parser;
+    parser.InitCharSets();
+    parser.SetSepForTr(false, true);
+    return parser.ValidNameChars();
+}
+} // anonymous namespace
 
 //---------------------------------------------------------------------------------------------------------------------
 TST_AbstractRegExp::TST_AbstractRegExp(const QString &locale, QObject *parent)
@@ -190,3 +202,25 @@ void TST_AbstractRegExp::CallTestCheckNoOriginalNamesInTranslation()
     }
 }
 
+//---------------------------------------------------------------------------------------------------------------------
+void TST_AbstractRegExp::CallTestForValidCharacters()
+{
+    QFETCH(QString, originalName);
+
+    static const QString validNameChars = PrepareValidNameChars();
+
+    if (QLocale() == QLocale(QStringLiteral("zh_CN")))
+    {
+        const QString message = QStringLiteral("We do not support translation of variables for locale zh_CN");
+        QSKIP(qUtf8Printable(message));
+    }
+
+    const QString translated = m_trMs->VarToUser(originalName);
+    const int pos = FindFirstNotOf(translated, validNameChars);
+    if (pos != -1)
+    {
+        const QString message = QStringLiteral("Translated string '%1' contains invalid character '%2' at position '%3'.")
+                .arg(translated).arg(translated.at(pos)).arg(pos);
+        QFAIL(qUtf8Printable(message));
+    }
+}
