@@ -62,6 +62,8 @@ private slots:
     void TestCheckInternalVaribleRegExp_data();
     void TestCheckInternalVaribleRegExp();
     void TestTemplatePlaceholders();
+    void TestForValidChars_data();
+    void TestForValidChars();
     void cleanupTestCase();
 
 private:
