@@ -20,6 +20,8 @@
 - [#915] Valentina produces wrong seam allowance for acute angle.
 - [#923] Valentina produces wrong seam allowance for rollback case.
 - [#924] Valentina produces wrong passmark for rollback case.
+- [#930] Valentina doesn't update translation for variables after dynamic language switch.
+- [#931] Variable translation for Greek and Chinese are broken.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
